Create the HTML

--- a/app/core/templates/sign-in.html
+++ b/app/core/templates/sign-in.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!doctype html>
-<html lang="en">
+<html lang="pt">
 
 <head>
   <meta charset="utf-8">
@@ -9,9 +9,6 @@
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="{% static '/favicon/favicon.ico' %}" type="image/x-icon">
-
-  <!-- Map CSS -->
-  <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css">
 
   <!-- Libs CSS -->
   <link rel="stylesheet" href="{% static '/css/libs.bundle.css' %}">
@@ -72,6 +69,7 @@
 
             <!-- Submit -->
             <button class="btn w-100 btn-primary" type="submit">
+              <i class="fe fe-log-in me-1"></i>
               Entrar
             </button>
 
