--- a/app/core/templates/base.html
+++ b/app/core/templates/base.html
@@ -90,7 +90,7 @@
                     <!-- List -->
                     <ul class="card-list list text-gray-700 mb-6">
                       <li class="list-item">
-                        <a class="list-link text-reset" href="{% url 'report' %}">
+                        <a class="list-link text-reset" href="{% url 'reports-list' %}">
                           Relatórios
                         </a>
                       </li>
