--- a/app/core/templates/report.html
+++ b/app/core/templates/report.html
@@ -28,34 +28,26 @@
                     </tr>
                 </thead>
                 <tbody>
+                    {% for report in reports %}
                     <tr>
                         <th scope="row">
-                            <a href="" target="_blank">
+                            <a href="{% url 'reports-detail' pk=report.pk %}">
                                 <i class="fe fe-link"></i>
                             </a>
                         </th>
-                        <td>30 de Maio de 1994</td>
+                        <td>{{ report.created_at }}</td>
                         <td>
                             <a href="" target="_blank">
                                 <i class="fe fe-link"></i>
-                            </a> Maria de Jesus
+                            </a> {{ report.patient }}
                         </td>
-                        <td>N/A</td>
+                        <td>{{ report.observation }}</td>
                     </tr>
+                    {% empty %}
                     <tr>
-                        <th scope="row">
-                            <a href="" target="_blank">
-                                <i class="fe fe-link"></i>
-                            </a>
-                        </th>
-                        <td>30 de Maio de 1994</td>
-                        <td>
-                            <a href="" target="_blank">
-                                <i class="fe fe-link"></i>
-                            </a> José de Jesus
-                        </td>
-                        <td>N/A</td>
+                        <td colspan="3">Nenhum relatório disponível.</td>
                     </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
